<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/black"
        android:paddingBottom="40dp"
        android:paddingTop="42dp">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ibtn_text"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:fontFamily="@font/museosans_500"
            android:layout_marginBottom="5dp"
            app:layout_constraintBottom_toTopOf="@id/barrier"
            app:layout_constraintStart_toEndOf="@id/ibtn_back"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageButton
            android:id="@+id/ibtn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:contentDescription="@string/back_description"
            android:src="@drawable/ic_baseline_arrow_back_ios_new_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/tv_title"/>


        <View
            android:id="@+id/barrier"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="40dp"/>

        <ImageButton
            android:id="@+id/ibtn_submit"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/gradient_button_background"
            android:backgroundTint="@color/black"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:contentDescription="@string/next"
            android:alpha="0.5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideline_btn_top"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:textColor="@color/black"
            android:fontFamily="@font/museosans_300"
            android:textSize="20sp"
            android:textAlignment="center"
            app:layout_constraintTop_toTopOf="@id/ibtn_submit"
            app:layout_constraintBottom_toBottomOf="@id/ibtn_submit"
            app:layout_constraintStart_toStartOf="@id/ibtn_submit"
            app:layout_constraintEnd_toEndOf="@id/ibtn_submit" />

        <EditText
            android:id="@+id/et_email"
            android:inputType="textEmailAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:padding="10dp"
            android:ems="27"
            android:autofillHints=""
            android:hint="@string/empty_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tv_email"
            app:layout_constraintTop_toBottomOf="@id/tv_email"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="40dp"/>

        <EditText
            android:id="@+id/et_password"
            android:inputType="textPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:padding="10dp"
            android:ems="27"
            android:autofillHints=""
            android:hint="@string/criteria"
            android:textColorHint="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tv_email"
            app:layout_constraintTop_toBottomOf="@id/tv_password"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="40dp" />

        <EditText
            android:id="@+id/et_password_retype"
            android:inputType="textPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:padding="10dp"
            android:ems="27"
            android:autofillHints=""
            android:hint="@string/empty_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tv_email"
            app:layout_constraintTop_toBottomOf="@id/tv_password_retype"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="40dp"
            android:paddingBottom="40dp"/>

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_address"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:fontFamily="@font/museosans_500"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/barrier"
            android:layout_marginStart="40dp"
            android:layout_marginTop="15dp"
            android:paddingBottom="10dp"
            android:layout_marginEnd="0dp" />

        <TextView
            android:id="@+id/tv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_password"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:fontFamily="@font/museosans_500"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_email"
            android:layout_marginStart="40dp"
            android:layout_marginTop="15dp"
            android:paddingBottom="10dp"
            android:layout_marginEnd="0dp" />

        <TextView
            android:id="@+id/tv_password_retype"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repeat_password"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:fontFamily="@font/museosans_500"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_password"
            android:layout_marginStart="40dp"
            android:layout_marginTop="15dp"
            android:paddingBottom="10dp"
            android:layout_marginEnd="0dp" />

        <TextView
            android:id="@+id/tv_requirements"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/requirements"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:fontFamily="@font/museosans_300"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            app:layout_constraintTop_toBottomOf="@id/ll_password"
            app:layout_constraintBottom_toTopOf="@id/guideline_btn_top"
            app:layout_constraintStart_toStartOf="@id/ibtn_submit"
            app:layout_constraintEnd_toEndOf="@id/ibtn_submit" />

        <ImageView
            android:id="@+id/iv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/tick"
            android:visibility="invisible"
            android:contentDescription="@string/email_check"
            app:layout_constraintEnd_toEndOf="@id/et_email"
            app:layout_constraintBottom_toBottomOf="@id/et_email"
            app:layout_constraintTop_toTopOf="@id/et_email"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="0dp" />

        <ImageView
            android:id="@+id/iv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/tick"
            android:visibility="invisible"
            android:contentDescription="@string/password_check"
            app:layout_constraintEnd_toEndOf="@id/et_password"
            app:layout_constraintBottom_toBottomOf="@id/et_password"
            app:layout_constraintTop_toTopOf="@id/et_password"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="0dp" />

        <ImageView
            android:id="@+id/iv_password_retype"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/tick"
            android:visibility="invisible"
            android:contentDescription="@string/retype_check"
            app:layout_constraintEnd_toEndOf="@id/et_password_retype"
            app:layout_constraintBottom_toBottomOf="@id/et_password_retype"
            app:layout_constraintTop_toTopOf="@id/et_password_retype"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="0dp" />

        <LinearLayout
            android:id="@+id/ll_password"
            android:visibility="gone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/border_bad"
            android:padding="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            app:layout_constraintStart_toStartOf="@id/et_password_retype"
            app:layout_constraintEnd_toEndOf="@id/et_password_retype"
            app:layout_constraintTop_toBottomOf="@id/et_password_retype">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/cross"
                android:contentDescription="@string/password_error"
                android:layout_marginEnd="10dp"/>

            <TextView
                android:id="@+id/tv_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/invalid"
                android:textSize="15sp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/border_bad"
            android:padding="10dp"
            android:layout_marginTop="15dp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="@id/et_email"
            app:layout_constraintEnd_toEndOf="@id/et_email"
            app:layout_constraintTop_toBottomOf="@id/et_email">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/cross"
                android:contentDescription="@string/email_error"
                android:layout_marginEnd="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/email"
                android:textSize="15sp"/>

        </LinearLayout>


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_btn_top"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.90" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>